crates/carta/tests/snapshots/docx__docx+native_numbering__figure.snap
---
source: crates/carta/tests/docx.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main" xmlns:m="http://schemas.openxmlformats.org/officeDocument/2006/math" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w10="urn:schemas-microsoft-com:office:word" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:pic="http://schemas.openxmlformats.org/drawingml/2006/picture" xmlns:wp="http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing">
<w:body>
<w:tbl>
<w:tblPr>
<w:tblStyle w:val="FigureTable" />
<w:tblW w:type="auto" w:w="0" />
<w:jc w:val="center" />
<w:tblLook w:firstRow="0" w:lastRow="0" w:firstColumn="0" w:lastColumn="0" />
</w:tblPr>
<w:tblGrid>
<w:gridCol w:w="7920" />
</w:tblGrid>
<w:tr>
<w:tc>
<w:tcPr />
<w:p>
<w:pPr>
<w:pStyle w:val="Compact" />
<w:jc w:val="center" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">A cat photo</w:t>
</w:r>
</w:p>
</w:tc>
</w:tr>
</w:tbl>
<w:p>
<w:pPr>
<w:pStyle w:val="ImageCaption" />
</w:pPr>
<w:bookmarkStart w:id="1" w:name="ref_fig1" />
<w:r>
<w:t xml:space="preserve">Figure </w:t>
</w:r>
<w:fldSimple w:instr="SEQ Figure \* ARABIC ">
<w:r>
<w:t>1</w:t>
</w:r>
</w:fldSimple>
<w:bookmarkEnd w:id="1" />
<w:r>
<w:t xml:space="preserve">: A cat photo</w:t>
</w:r>
</w:p>
<w:sectPr>
<w:footnotePr>
<w:numRestart w:val="eachSect" />
</w:footnotePr>
</w:sectPr>
</w:body>
</w:document>
